--- a/ex_jokenpo/template/index.html
+++ b/ex_jokenpo/template/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 
 <html lang"en">
+<head>
+    <meta charset ="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Exercicio Joken Po </title>
+    <link rel="stylesheet" type="text/css" href="ex_jokenpo/static/jokenpo.css">
+
+</head>
+    <h1> Game Jokenpo</h1>
+    
+
+
 
 </html>
