Adding more to html

--- a/ex_jokenpo/template/index.html
+++ b/ex_jokenpo/template/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-
-<html lang"en">
+<html lang="en">
 <head>
-    <meta charset ="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Exercicio Joken Po </title>
-    <link rel="stylesheet" type="text/css" href="ex_jokenpo/static/jokenpo.css">
-
+    <title>Exercicio Joken Po</title>
+    <link rel="stylesheet" type="text/css" href="static/jokenpo.css">
 </head>
-    <h1> Game Jokenpo</h1>
-    
-
-
-
+<body>
+    <header>
+        <h1>Game Jokenpo</h1>
+        <h3> Utilizar: <br>
+            from random import randint<br>
+            from time import sleep
+    </header>
+</body>
 </html>
